--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
   truco-app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: truco-app
     env_file:
           - .env
