--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,17 @@ services:
         - action: rebuild
           path: ./pom.xml
 
+  proxy-dev:
+    image: nginx:alpine
+    container_name: proxy_dev
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.dev.conf:/etc/nginx/conf.d/default.conf:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+          - postgres_net
 networks:
   postgres_net:
     external: true
